--- a/ClientApp/src/app/components/quiz/quizzes.component.html
+++ b/ClientApp/src/app/components/quiz/quizzes.component.html
@@ -9,32 +9,24 @@
     .qv-result button {
       margin: 15px auto;
     }
-
-  .img-bg {
-    width: 100% !important;
-    background-size: cover;
-    height: 300px;
-    background-image: url(assets/noData.jpg);
-  }
-
 </style>
 
-<div *ngIf="currentLanguage=='ru';else uzDiv" [class.d-none]="canBuildQuiz">
+<div [class.d-none]="canBuildQuiz">
   <div class="inner-container">
-    <div class="d-flex flex-wrap flex-row justify-content-md-center">
+    <div class="d-flex flex-wrap flex-row justify-content-center">
       <div class="item-text">
         <div [className]="order>=1 ? 'btn btn-info color-black':'item-btn item-btn-sub item-text'">
-          {{repo.currentSubject.firstSubject?.ruVersion || 'первый блок'}}
+          {{(repo.currentSubject.firstSubject | validName) || ('firstBlok' | translate)}}
         </div>
       </div>
       <div class="item-text">
         <div [className]="order>=2 ? 'btn btn-info color-black':'item-btn item-btn-sub item-text'">
-          {{repo.currentSubject.secondSubject?.ruVersion || 'второй блок'}}
+          {{(repo.currentSubject.secondSubject | validName) || ('secondBlok' | translate)}}
         </div>
       </div>
     </div>
     <div style="margin-top:5px;margin-bottom:5px;"></div>
-    <div class="d-flex flex-wrap flex-row justify-content-md-center">
+    <div class="d-flex flex-wrap flex-row justify-content-center">
       <div [class.d-none]="order<2">
         <div class="arr-container">
           <div>
@@ -48,7 +40,7 @@
               Русский
             </button>
           </div>
-          <p>Язык</p>
+          <p>{{'Language' | translate}}</p>
         </div>
       </div>
     </div>
@@ -60,7 +52,7 @@
     <div style="margin-top:50px" class="d-flex justify-content-center flex-wrap">
 
       <button class="btn btn-info m-1 color-black" *ngFor="let subject of initialSubjects" id="code" (click)="selectSubject(subject)">
-        {{subject?.ruVersion || 'Loading'}}
+        {{subject | validName}}
       </button>
     </div>
   </div>
@@ -68,81 +60,28 @@
 
   <button [className]="canBegin() ? 'item-btn item-btn-clear d-block':'d-none'" id="submitBtm"
           class="item-btn item-btn-clear" style="margin:0 auto" (click)="beginTest()">
-    Начать тест
+    {{'BeginTest' | translate}}
   </button>
 
   
 </div>
 
-<ng-template #uzDiv>
-  <div class="inner-container">
-    <div class="d-flex flex-wrap flex-row justify-content-md-center">
-      <div class="item-text">
-        <div [className]="order>=1 ? 'btn btn-info color-black':'item-btn item-btn-sub item-text'">
-          {{repo.currentSubject.firstSubject?.uzVersion || 'birinchi fan'}}
-        </div>
-      </div>
-      <div class="item-text">
-        <div [className]="order>=2 ? 'btn btn-info color-black':'item-btn item-btn-sub item-text'">
-          {{repo.currentSubject.secondSubject?.uzVersion || 'ikkinchi fan'}}
-        </div>
-      </div>
-    </div>
-    <div style="margin-top:5px;margin-bottom:5px;"></div>
-    <div class="d-flex flex-wrap flex-row justify-content-md-center">
-      <div [class.d-none]="educationTypes===undefined||educationTypes==null||educationTypes.length==0">
-        <div class="arr-container">
-          <div>
-            <button [className]="isThisEducationType(e.code) ? 'btn btn-info color-black':'item-btn item-btn-sub item-text  cursor-pointer'" *ngFor="let e of educationTypes" (click)="selectEducationType(e)">
-              {{e?.uzVersion || 'Loading'}}
-            </button>
-          </div>
-          <p>Shakl</p>
-        </div>
-      </div>
-      <div [class.d-none]="languages===undefined||languages==null||languages.length==0">
-        <div class="arr-container">
-          <div>
-            <button id="{{l.code}}" [className]="isThisLanguage(l.code) ? 'btn btn-info color-black':'item-btn item-btn-sub item-text  cursor-pointer'"
-                    class="btn btn-primary" *ngFor="let l of languages" (click)="selectLanguage(l)">
-              {{l?.uzVersion || 'Loading'}}
-            </button>
-          </div>
-          <p>Til</p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <button id="resetBtn" class="item-btn item-btn-clear d-block" style="margin:0 auto" (click)="clear()">Tozalash</button>
-  <div [className]="order==0 ? 'd-block' : 'd-none'"><p class="helper yura">{{'HELP1' | translate}}</p></div>
-  <div [className]="order==1 ? 'd-block' : 'd-none'"><p class="helper yura">{{'HELP2' | translate}}</p></div>
-  <div [className]="(!canBuild() && order>=2 )? 'd-block' : 'd-none'"><p class="helper yura">{{'HELP4' | translate}}</p></div>
-  <div [class.d-none]="currentSubject.isFilled()">
-    <div style="margin-top:50px" class="d-flex justify-content-center flex-wrap">
-
-      <button class="btn btn-info m-1 color-black" *ngFor="let subject of initialSubjects" id="code" (click)="selectSubject(subject)">
-        {{subject?.uzVersion || 'Loading'}}
-      </button>
-    </div>
-  </div>
-</ng-template>
-
 <div class="quiz-container">
   <quiz-view *ngIf="canBuildQuiz" (isQuizEndedOutput)="getStatus($event)" (qResultOutput)="getQuizResult($event)"></quiz-view>
   <div class="qv-result" [class.d-none]="!isQuizEnded">
-    <button class="btn btn-info color-black d-block" (click)="retry()">Еще раз</button>
-    <button class="btn btn-info color-black d-block" (click)="getUniversities()">Посмотреть в какие вузы мог бы поступить</button>
+    <button class="btn btn-info color-black d-block" (click)="retry()">{{'Retry' | translate}}</button>
+    <button class="btn btn-info color-black d-block" (click)="getUniversities()">{{'UniversityList' | translate}}</button>
   </div>
-  <div [class.d-none]="!canBuildTable">
-    <div class="d-flex flex-wrap flex-row justify-content-md-center">
+  <div [class.d-none]="!repo.buildFilter.canBuild">
+    <div class="d-flex flex-wrap flex-row justify-content-center">
       <div>
         <div class="arr-container">
           <div>
             <button [className]="isThisEducationType(e.code) ? 'btn btn-info color-black':'item-btn item-btn-sub item-text cursor-pointer'" *ngFor="let e of educationTypes" (click)="selectEducationType(e)">
-              {{e?.ruVersion|| 'Loading'}}
+              {{e | validName}}
             </button>
           </div>
-          <p>Тип</p>
+          <p>{{'EduType' | translate}}</p>
         </div>
       </div>
       <div>
@@ -150,19 +89,22 @@
           <div>
             <button id="{{l.code}}" [className]="isThisLanguage(l.code) ? 'btn btn-info color-black':'item-btn item-btn-sub item-text cursor-pointer'"
                     class="btn btn-primary" *ngFor="let l of languages" (click)="selectLanguage2(l)">
-              {{l?.ruVersion|| 'Loading'}}
+              {{l | validName}}
             </button>
           </div>
-          <p>Язык</p>
+          <p>{{'Language' | translate}}</p>
         </div>
       </div>
     </div>
+
     <table-builder></table-builder>
 
+
   </div>
-  <div [class.d-none]="!noData">
-    <div class="img-bg" style="height:500px">
-      <p></p>
+
+  <div [class.d-none]="!hasResult">
+    <div>
+      <p>{{'NoOneUniversity' | translate}}</p>
     </div>
   </div>
 </div>
