--- a/ClientApp/src/app/components/tblBuilder/tableBuilder.component.html
+++ b/ClientApp/src/app/components/tblBuilder/tableBuilder.component.html
@@ -1,133 +1,65 @@
 <!-- ru -->
-<div *ngIf="currentLanguage=='ru';else uzDiv">
-  <div class="container" id="con" *ngIf="isNoResult;else nofacultyRu">
-    <div class="table100">
-      <div *ngFor="let u of universities">
-        <p class="text-center u-name-container" [ngStyle]="{'display':style.uNameDisplay  }">
-          <a class="u-name" href="UniversityList/University/{{u.id}}">{{u.nameRu}} </a>
-        </p>
-        <table class="exo2">
-          <thead>
-            <tr class="table100-head">
-              <th>{{'N'}}</th>
-              <th>{{tableHeader.code}}</th>
-              <th>{{tableHeader.direction}}</th>
-              <th class="cursor-pointer" (click)="orderByCount()">
-                {{tableHeader.plan}}
-                <span [ngStyle]="{'display':style.subjectDisplay}" class="{{arrowByCountClass}}"></span>
-              </th>
-              <th class="cursor-pointer" (click)="orderByPoint()">
-                {{tableHeader.pass}}
-                <span [ngStyle]="{'display':style.subjectDisplay}" class="{{arrowByPointClass}}"></span>
-              </th>
-              <th>{{tableHeader.accept}}</th>
+<div class="container" id="con" *ngIf="isNoResult;else nofacultyRu">
+  <div class="table100">
+    <div *ngFor="let u of universities">
+      <p class="text-center u-name-container" [ngStyle]="{'display':style.uNameDisplay  }">
+        <a class="u-name" href="UniversityList/University/{{u.id}}">{{u | validName}} </a>
+      </p>
+      <table class="exo2">
+        <thead>
+          <tr class="table100-head">
+            <th>{{'N'}}</th>
+            <th>{{tableHeader.code}}</th>
+            <th>{{tableHeader.direction}}</th>
+            <th class="cursor-pointer" (click)="orderByCount()">
+              {{tableHeader.plan}}
+              <span [ngStyle]="{'display':style.subjectDisplay}" class="{{arrowByCountClass}}"></span>
+            </th>
+            <th class="cursor-pointer" (click)="orderByPoint()">
+              {{tableHeader.pass}}
+              <span [ngStyle]="{'display':style.subjectDisplay}" class="{{arrowByPointClass}}"></span>
+            </th>
+            <th>{{tableHeader.accept}}</th>
+          </tr>
+        </thead>
+        <tbody>
+          <ng-container *ngFor="let fac of u.faculties;let i=index">
+            <tr [ngStyle]="{'display':style.subjectDisplay}">
+              <td colspan="6" id="subj-td" class="extra-info">{{'Subjects' | translate }}: {{createSubject(fac.subject) || ('NoSubject' | translate)}}</td>
             </tr>
-          </thead>
-          <tbody>
-            <ng-container *ngFor="let fac of u.faculties;let i=index">
-              <tr [ngStyle]="{'display':style.subjectDisplay}">
-                <td colspan="6" id="subj-td" class="extra-info">Предметы: {{createSubject(fac.subject) || 'Данные отсутствуют'}}</td>
-              </tr>
-              <tr>
-                <td>{{i+1}}</td>
-                <td>{{fac.code}}</td>
-                <td style="text-align:left">{{fac.facultyNameRu}}</td>
-                <td class="number">
-                  <span [className]="grantCount ? 'grand-light' :''">
-                    {{fac.grant}} /
-                  </span>
-                  <span [className]="contractCount ? 'contract-light' :''">
-                    {{fac.contract}}
-                  </span>
-                </td>
-                <td class="number">
-                  <span [className]="grantPoint ? 'grand-light' :''">
-                    {{fac.grantPass}} /
-                  </span>
-                  <span [className]="contractPoint ? 'contract-light' :''">
-                    {{fac.contractPass}}
-                  </span>
-                </td>
+            <tr>
+              <td>{{i+1}}</td>
+              <td>{{fac.code}}</td>
+              <td style="text-align:left">{{currentLanguage=='uz' ? fac.facultyNameUz : facultyNameRu}}</td>
+              <td class="number">
+                <span [className]="grantCount ? 'grand-light' :''">
+                  {{fac.grant}} /
+                </span>
+                <span [className]="contractCount ? 'contract-light' :''">
+                  {{fac.contract}}
+                </span>
+              </td>
+              <td class="number">
+                <span [className]="grantPoint ? 'grand-light' :''">
+                  {{fac.grantPass}} /
+                </span>
+                <span [className]="contractPoint ? 'contract-light' :''">
+                  {{fac.contractPass}}
+                </span>
+              </td>
 
-                <td class="number">{{fac.totalApply}}</td>
-              </tr>
-            </ng-container>
-           
-          </tbody>         
-        </table>
-      </div>
+              <td class="number">{{fac.totalApply}}</td>
+            </tr>
+          </ng-container>
+
+        </tbody>
+      </table>
     </div>
   </div>
 </div>
 
-<!-- end ru -->
-<!-- uz -->
-<ng-template #uzDiv>
-  <div class="container" id="con" *ngIf="isNoResult;else nofacultyUz">
-    <div class="table100">
-      <div *ngFor="let u of universities">
-        <p class="text-center u-name-container" [ngStyle]="{'display':style.uNameDisplay  }">
-          <a class="u-name" href="UniversityList/University/{{u.id}}">{{u.nameUz}} </a>
-        </p>
-        <table class="exo2">
-          <thead>
-            <tr class="table100-head">
-              <th>{{'N'}}</th>
-              <th>{{tableHeader.code}}</th>
-              <th>{{tableHeader.direction}}</th>
-              <th class="cursor-pointer" (click)="orderByCount()">
-                {{tableHeader.plan}}
-                <span [ngStyle]="{'display':style.subjectDisplay}" class="{{arrowByCountClass}}"></span>
-              </th>
-              <th class="cursor-pointer" (click)="orderByPoint()">
-                {{tableHeader.pass}}
-                <span [ngStyle]="{'display':style.subjectDisplay}" class="{{arrowByPointClass}}"></span>
-              </th>
-              <th>{{tableHeader.accept}}</th>
-            </tr>
-          </thead>
-          <tbody>
-            <ng-container *ngFor="let fac of u.faculties;let i=index">
-              <tr [ngStyle]="{'display':style.subjectDisplay}">
-                <td colspan="6" id="subj-td" class="extra-info">Fanlar: {{createSubject(fac.subject) || 'Ma\'lumot yo\'q'}}</td>
-              </tr>
-              <tr>
-                <td>{{i+1}}</td>
-                <td>{{fac.code}}</td>
-                <td style="text-align:left">{{fac.facultyNameUz}}</td>
-                <td class="number">
-                  <span [className]="grantCount ? 'grand-light' :''">
-                    {{fac.grant}} /
-                  </span>
-                  <span [className]="contractCount ? 'contract-light' :''">
-                    {{fac.contract}}
-                  </span>
-                </td>
-                <td class="number">
-                  <span [className]="grantPoint ? 'grand-light' :''">
-                    {{fac.grantPass}} /
-                  </span>
-                  <span [className]="contractPoint ? 'contract-light' :''">
-                    {{fac.contractPass}}
-                  </span>
-                </td>
-                <td class="number">{{fac.totalApply}}</td>
-              </tr>
-            </ng-container>
-
-          </tbody>
-        </table>
-      </div>
-    </div>
-  </div>
-
-</ng-template>
-
 <ng-template #nofacultyRu>
-  <h1 class="mt-4 text-center" style="color:cyan">Данные отсутствуют</h1>
+  <h1 class="mt-4 text-center" style="color:cyan">{{'NoSubject' | translate}}</h1>
 </ng-template>
 
-<ng-template #nofacultyUz>
-  <h1 class="mt-4 text-center" style="color:cyan">Ma'lumot yo'q</h1>
-</ng-template>
 
