--- a/ClientApp/src/app/components/universityFilter/subjectFilter.component.html
+++ b/ClientApp/src/app/components/universityFilter/subjectFilter.component.html
@@ -1,14 +1,13 @@
-<div *ngIf="currentLanguage=='ru';else uzDiv">
   <div class="inner-container">
-    <div class="d-flex flex-wrap flex-row justify-content-md-center">
+    <div class="d-flex flex-wrap flex-row justify-content-center">
       <div class="item-text">
         <div [className]="order>=1 ? 'btn btn-info color-black':'item-btn item-btn-sub item-text'">
-          {{repo.currentSubject.firstSubject?.ruVersion || 'первый блок'}}
+          {{(repo.currentSubject.firstSubject | validName) || ('firstBlok' | translate)}}
         </div>
       </div>
       <div class="item-text">
         <div [className]="order>=2 ? 'btn btn-info color-black':'item-btn item-btn-sub item-text'">
-          {{repo.currentSubject.secondSubject?.ruVersion || 'второй блок'}}
+          {{(repo.currentSubject.secondSubject | validName) || ('secondBlok' | translate)}}
         </div>
       </div>
       <!--<div class="item-text">
@@ -17,95 +16,41 @@
       </div>-->
     </div>
     <div style="margin-top:5px;margin-bottom:5px;"></div>
-    <div class="d-flex flex-wrap flex-row justify-content-md-center">
+    <div class="d-flex flex-wrap flex-row justify-content-center">
       <div [class.d-none]="educationTypes===undefined||educationTypes==null||educationTypes.length==0">
         <div class="arr-container">
-          <div>
+          <div class="d-flex justify-content-center flex-wrap">
             <button [className]="isThisEducationType(e.code) ? 'btn btn-info color-black':'item-btn item-btn-sub item-text cursor-pointer'" *ngFor="let e of educationTypes" (click)="selectEducationType(e)">
-              {{e?.ruVersion|| 'Loading'}}
+              {{e | validName }}
             </button>
           </div>
-          <p>Тип</p>
+          <p>{{'EduType' | translate}}</p>
         </div>
       </div>
       <div [class.d-none]="languages===undefined||languages==null||languages.length==0">
         <div class="arr-container">
-          <div>
+          <div class="d-flex justify-content-center flex-wrap">
             <button id="{{l.code}}" [className]="isThisLanguage(l.code) ? 'btn btn-info color-black':'item-btn item-btn-sub item-text cursor-pointer'"
                     class="btn btn-primary" *ngFor="let l of languages" (click)="selectLanguage(l)">
-              {{l?.ruVersion|| 'Loading'}}
+              {{l | validName }}
             </button>
           </div>
-          <p>Язык</p>
+          <p>{{'Language' | translate}}</p>
         </div>
       </div>
     </div>
   </div>
-  <button id="resetBtn" class="item-btn item-btn-clear d-block" style="margin:0 auto" (click)="clear()">Сбросить</button>
+  <button id="resetBtn" class="item-btn item-btn-clear d-block" style="margin:0 auto" (click)="clear()">{{'Reset' | translate}}</button>
   <div [className]="order==0 ? 'd-block' : 'd-none'"><p class="helper yura">{{'HELP1' | translate}}</p></div>
   <div [className]="order==1 ? 'd-block' : 'd-none'"><p class="helper yura">{{'HELP2' | translate}}</p></div>
   <div [className]="(!canBuild() && order>=2 )? 'd-block' : 'd-none'"><p class="helper yura">{{'HELP4' | translate}}</p></div>
   <div [class.d-none]="currentSubject.isFilled()">
     <div style="margin-top:50px" class="d-flex justify-content-center flex-wrap">
 
-      <button class="btn btn-info m-1 color-black" *ngFor="let subject of initialSubjects" id="code" (click)="selectSubject(subject)">
-        {{subject?.ruVersion || 'Loading'}}
-      </button>
+      <button class="btn btn-info m-1 color-black" *ngFor="let subject of initialSubjects" id="{{subject.code}}" (click)="selectSubject(subject)">
+        {{subject | validName }}
+      </button> 
     </div>
   </div>
-</div>
-
-<ng-template #uzDiv>
-  <div class="inner-container">
-    <div class="d-flex flex-wrap flex-row justify-content-md-center">
-      <div class="item-text">
-        <div [className]="order>=1 ? 'btn btn-info color-black':'item-btn item-btn-sub item-text'">
-          {{repo.currentSubject.firstSubject?.uzVersion || 'birinchi fan'}}
-        </div>
-      </div>
-      <div class="item-text">
-        <div [className]="order>=2 ? 'btn btn-info color-black':'item-btn item-btn-sub item-text'">
-          {{repo.currentSubject.secondSubject?.uzVersion || 'ikkinchi fan'}}
-        </div>
-      </div>    
-    </div>
-    <div style="margin-top:5px;margin-bottom:5px;"></div>
-    <div class="d-flex flex-wrap flex-row justify-content-md-center">
-      <div [class.d-none]="educationTypes===undefined||educationTypes==null||educationTypes.length==0">
-        <div class="arr-container">
-          <div>
-            <button [className]="isThisEducationType(e.code) ? 'btn btn-info color-black':'item-btn item-btn-sub item-text  cursor-pointer'" *ngFor="let e of educationTypes" (click)="selectEducationType(e)">
-              {{e?.uzVersion || 'Loading'}}
-            </button>
-          </div>
-          <p>Shakl</p>
-        </div>
-      </div>
-      <div [class.d-none]="languages===undefined||languages==null||languages.length==0">
-        <div class="arr-container">
-          <div>
-            <button id="{{l.code}}" [className]="isThisLanguage(l.code) ? 'btn btn-info color-black':'item-btn item-btn-sub item-text  cursor-pointer'"
-                    class="btn btn-primary" *ngFor="let l of languages" (click)="selectLanguage(l)">
-              {{l?.uzVersion || 'Loading'}}
-            </button>
-          </div>
-          <p>Til</p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <button id="resetBtn" class="item-btn item-btn-clear d-block" style="margin:0 auto" (click)="clear()">Tozalash</button>
-  <div [className]="order==0 ? 'd-block' : 'd-none'"><p class="helper yura">{{'HELP1' | translate}}</p></div>
-  <div [className]="order==1 ? 'd-block' : 'd-none'"><p class="helper yura">{{'HELP2' | translate}}</p></div>
-  <div [className]="(!canBuild() && order>=2 )? 'd-block' : 'd-none'"><p class="helper yura">{{'HELP4' | translate}}</p></div>
-  <div [class.d-none]="currentSubject.isFilled()">
-    <div style="margin-top:50px" class="d-flex justify-content-center flex-wrap">
-
-      <button class="btn btn-info m-1 color-black" *ngFor="let subject of initialSubjects" id="code" (click)="selectSubject(subject)">
-        {{subject?.uzVersion || 'Loading'}}
-      </button>
-    </div>
-  </div>
-</ng-template>
 
 
