--- a/ClientApp/src/app/components/quiz/quizzes.component.html
+++ b/ClientApp/src/app/components/quiz/quizzes.component.html
@@ -45,7 +45,7 @@
       </div>
     </div>
   </div>
-  <button id="resetBtn" class="item-btn item-btn-clear d-block" style="margin:0 auto" (click)="clear()">Сбросить</button>
+  <button id="resetBtn" class="item-btn item-btn-clear d-block" style="margin:0 auto" (click)="clear()">{{'Reset' | translate}}</button>
   <div [className]="order==0 ? 'd-block' : 'd-none'"><p class="helper yura">{{'HELP1' | translate}}</p></div>
   <div [className]="order==1 ? 'd-block' : 'd-none'"><p class="helper yura">{{'HELP2' | translate}}</p></div>
   <div [class.d-none]="currentSubject.isFilled()">
