--- a/UniInfo.Web/wwwroot/css/site.css
+++ b/UniInfo.Web/wwwroot/css/site.css
@@ -72,6 +72,9 @@
     text-align: center;
     color: #03132b;
 }
+.main-element{
+    margin-bottom:5px;
+}
 .card-bg {
     background: #dde3ea;
     box-shadow: 0px 2px 5px 2px #03132b;
