--- a/ClientApp/src/app/components/quiz/quizView.component.html
+++ b/ClientApp/src/app/components/quiz/quizView.component.html
@@ -136,9 +136,11 @@
       <tr>
         <td>
           {{result?.firstSubjectRightAnswersCount}}
+          {{ 'Right' | translate}}
         </td>
         <td>
           {{result?.secondSubjectRightAnswersCount}}
+          {{ 'Right' | translate}}
         </td>
       </tr>
       <tr>
@@ -152,6 +154,7 @@
       <tr>
         <td colspan="2">
           {{result?.totalPoints}}
+          {{ 'Point' | translate}}
         </td>
       </tr>
     </table>
