--- a/ClientApp/src/app/components/quiz/quizzes.component.html
+++ b/ClientApp/src/app/components/quiz/quizzes.component.html
@@ -103,7 +103,7 @@
   </div>
 
   <div [class.d-none]="!hasResult">
-    <div>
+    <div class="text-center" style="font-size:18px;">
       <p>{{'NoOneUniversity' | translate}}</p>
     </div>
   </div>
