--- a/UniInfo.Web/Views/Home/Index.cshtml
+++ b/UniInfo.Web/Views/Home/Index.cshtml
@@ -37,7 +37,7 @@
                     <img src="~/images/futuristicquiz.jpg" class="img-fluid">
                     <div class="text">@Localizer["Quiz"]</div>
                     <p class="img-dif fade-animation">@Localizer["QuizDescription"]</p>
-                    <a class="btn btn-about fade-animation" asp-action="Index" asp-controller="UniversityList">
+                    <a class="btn btn-about fade-animation" asp-action="Index" asp-controller="Quiz">
                         @Localizer["About"]
                     </a>
                 </div>
