--- a/UniInfo.Web/wwwroot/css/site.css
+++ b/UniInfo.Web/wwwroot/css/site.css
@@ -507,14 +507,13 @@ tbody tr {
 }
 
 .arrow-position-up {
-    right: 50%;
-    bottom: -5px;
+    display: block;
+    margin: 5px auto;
 }
 
 .arrow-position-down {
-    right: 50%;
-    bottom: 0;
-    top: 28px;
+   display:block;
+   margin: 5px auto;
 }
 
 
@@ -541,4 +540,36 @@ tbody tr {
 
 .grand-light {
     color: #0ddede;
+}
+/*Load animation*/
+.loader {
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid #3498db;
+    width: 120px;
+    height: 120px;
+    -webkit-animation: spin 2s linear infinite; /* Safari */
+    animation: spin 2s linear infinite;
+    margin:50px auto;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+    }
+
+    100% {
+        -webkit-transform: rotate(360deg);
+    }
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
