--- a/UniInfo.Web/Views/UniversityFilter/Index.cshtml
+++ b/UniInfo.Web/Views/UniversityFilter/Index.cshtml
@@ -6,4 +6,6 @@
         <script src="styles.js"></script>
         <script src="vendor.js"></script>
         <script src="main.js"></script> }
-    <app-root></app-root>
+<app-root>
+    <div class="loader"></div>
+</app-root>
