--- a/UniInfo.Web/Views/Home/Index.cshtml
+++ b/UniInfo.Web/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@inject IViewLocalizer Localizer
 @{
     Layout = "_Layout";
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = Localizer["Title"];
 }
 <style>
 </style>
