--- a/ClientApp/src/app/components/quiz/quizzes.component.html
+++ b/ClientApp/src/app/components/quiz/quizzes.component.html
@@ -15,7 +15,7 @@
   <div class="inner-container">
     <div class="d-flex flex-wrap flex-row justify-content-center">
       <div class="item-text">
-        <div [className]="order>=1 ? 'btn btn-info color-black':'item-btn item-btn-sub item-text'">
+        <div  [className]="order>=1 ? 'btn btn-info color-black':'item-btn item-btn-sub item-text'">
           {{(repo.currentSubject.firstSubject | validName) || ('firstBlok' | translate)}}
         </div>
       </div>
@@ -29,7 +29,7 @@
     <div class="d-flex flex-wrap flex-row justify-content-center">
       <div [class.d-none]="order<2">
         <div class="arr-container">
-          <div>
+          <div class="quiz-lang">
             <button class="btn btn-primary" [className]="isThisLanguage(1) ? 'btn btn-info color-black':'item-btn item-btn-sub item-text cursor-pointer'"
                     (click)="selectLanguage(1)">
               O'zbekcha
@@ -49,7 +49,7 @@
   <div [className]="order==0 ? 'd-block' : 'd-none'"><p class="helper yura">{{'HELP1' | translate}}</p></div>
   <div [className]="order==1 ? 'd-block' : 'd-none'"><p class="helper yura">{{'HELP2' | translate}}</p></div>
   <div [class.d-none]="currentSubject.isFilled()">
-    <div style="margin-top:50px" class="d-flex justify-content-center flex-wrap">
+    <div id="subjectDiv" style="margin-top:50px" class="d-flex justify-content-center flex-wrap">
 
       <button class="btn btn-info m-1 color-black" *ngFor="let subject of initialSubjects" id="code" (click)="selectSubject(subject)">
         {{subject | validName}}
@@ -76,7 +76,7 @@
     <div class="d-flex flex-wrap flex-row justify-content-center">
       <div>
         <div class="arr-container">
-          <div>
+          <div id="eduDiv">
             <button [className]="isThisEducationType(e.code) ? 'btn btn-info color-black':'item-btn item-btn-sub item-text cursor-pointer'" *ngFor="let e of educationTypes" (click)="selectEducationType(e)">
               {{e | validName}}
             </button>
@@ -86,7 +86,7 @@
       </div>
       <div>
         <div class="arr-container">
-          <div>
+          <div id="langDiv">
             <button id="{{l.code}}" [className]="isThisLanguage(l.code) ? 'btn btn-info color-black':'item-btn item-btn-sub item-text cursor-pointer'"
                     class="btn btn-primary" *ngFor="let l of languages" (click)="selectLanguage2(l)">
               {{l | validName}}
